# student-projects

ifpr/oo/Madeireira/: _classpath.xml  _project.xml
ifpr/oo/Madeireira/BD/: 1FN  BrMadeireira.brM  Dicionario de Dados.ods  WORKmadeireira.mwb
ifpr/oo/Madeireira/database/: create_database.sql  madeireira.sql
ifpr/web/CEV/: README.md  db.sql
ifpr/web/CEV/src/: conexao.php  login.php  menu.php  valida_user.php
ifpr/web/MEV/: README.md  db.sql
ifpr/web/MEV/Controller/: ItemController.php  PessoaController.php  ProdutoController.php  ValidacaoLogin.php  VendaController.php
ifpr/web/MEV/DAO/: ItemDAO.php  PessoaDAO.php  ProdutoDAO.php  VendaDAO.php  conexao.php
ifpr/web/MEV/Diagramas/: ModeloEntidadeRelacionamento.brM  (+1 more)
unioeste/aed/b-tree/: CMakeLists.txt  input.txt  main.c
unioeste/aed/b-tree/src/: main.c
unioeste/aed/b-tree/src/handlers/: DataHandler.c  DataHandler.h  IndexHandler.c  IndexHandler.h  TreeHandler.c  TreeHandler.h
unioeste/aed/b-tree/src/model/: Queue.c  Queue.h
unioeste/aed/b-tree/src/view/: App.c  App.h
unioeste/aed/data-structures/: CMakeLists.txt  main.c
unioeste/aed/data-structures/BTree/: BTree.c  BTree.h  Tree23.c  Tree23.h
unioeste/aed/data-structures/BinaryTree/: BinaryTree.c  BinaryTree.h
unioeste/aed/data-structures/DoublyCircularLinkedList/: DoublyCircularLinkedList.c  DoublyCircularLinkedList.h
unioeste/aed/data-structures/DoublyLinkedList/: DoublyLinkedList.c  DoublyLinkedList.h
unioeste/aed/data-structures/HashTable/: Hashtable.h
unioeste/aed/data-structures/HashTable/linearProbe/: linearProbe.c  linearProbe.h
unioeste/aed/data-structures/HashTable/simple/: simple.c  simple.h
unioeste/aed/data-structures/LinkedList/: LinkedList.c  LinkedList.h
unioeste/aed/data-structures/LinkedListRecursive/: LinkedListRecursive.c  LinkedListRecursive.h
unioeste/aed/data-structures/LinkedListSorted/: LinkedListSorted.c  LinkedListSorted.h
unioeste/aed/data-structures/LinkedListTailHead/: LinkedListTailHead.c  LinkedListTailHead.h
unioeste/aed/data-structures/Queue/: Queue.c  Queue.h
unioeste/aed/data-structures/SearchAlgorithms/: Search.c
unioeste/aed/data-structures/Set/: Set.c  Set.h
unioeste/aed/data-structures/Stack/: Stack.c  Stack.h
unioeste/aed/data-structures/Standalone/: arithmeticExpression.c  recursion.c
unioeste/aed/data-structures/TrieTree/: TrieTree.c  TrieTree.h
unioeste/aed/sparse-matrix/: App.c  App.h  CMakeLists.txt  Matrix.c  Matrix.h  main.c
unioeste/aed/trie-tree/: CMakeLists.txt  main.c
unioeste/cg/csg-povray/: Round_Box_Y.inc  demo.pov
unioeste/cg/ray-tracer/: .gitignore  CMakeLists.txt
unioeste/comp/cdec-compiler/: .gitignore  Makefile  README.md  arvores_test1.txt  driver.cpp  driver.h  main.cpp  parser.y  scanner.h  scanner.l  symTable.cpp  symTable.h  tree.cpp  tree.h
unioeste/es2/project-manager-back/: Dockerfile  README.md  docker-compose.yml  pom.xml
unioeste/es2/project-manager-front/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
unioeste/paa/edgerunner-graphs/: CMakeLists.txt  FindGraphviz.cmake
unioeste/paa/edgerunner-graphs/resources/tests/: test1.txt  test2.txt  test3.txt
unioeste/paa/edgerunner-graphs/src/: App.cpp  App.h
unioeste/paa/edgerunner-graphs/src/graph/: Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h
unioeste/paa/edgerunner-graphs/src/solvers/: BFSSolver.cpp  BFSSolver.h  BellmanFordSolver.cpp  BellmanFordSolver.h  DFSSolver.cpp  DFSSolver.h  DijkstraSolver.cpp  DijkstraSolver.h  FloydWarshallSolver.cpp  FloydWarshallSolver.h  KruskalSolver.cpp  KruskalSolver.h  PrimSolver.cpp  PrimSolver.h  Solver.h
unioeste/web/simple-tic-tac-toe/: index.css  index.html  main.js
(+92 files in other folders)
